<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/number_edit_text"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:hint="@string/edit_text_hint"
        android:importantForAutofill="no"
        android:inputType="number"
        android:layout_margin="@dimen/margin_sixteen"
        android:padding="@dimen/padding_eight"
        android:background="@drawable/edit_text_border"
        android:layout_alignParentTop="true"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentBottom="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="4">

            <Button
                android:id="@+id/button_one"
                android:text="@string/button_one"
                android:onClick="operationFunction"
                style="@style/button_style" />
            <Button
                style="@style/button_style"
                android:id="@+id/button_two"
                android:onClick="operationFunction"
                android:text="@string/button_two"
                />
            <Button
                style="@style/button_style"
                android:id="@+id/button_three"
                android:onClick="operationFunction"
                android:text="@string/button_three"/>
            <Button
                style="@style/button_style"
                android:id="@+id/button_slash"
                android:onClick="operationFunction"
                android:layout_marginEnd="8dp"
                android:text="@string/button_slash"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="4">

            <Button
                android:text="@string/button_four"
                android:id="@+id/button_four"
                android:onClick="operationFunction"
                style="@style/button_style" />
            <Button
                style="@style/button_style"
                android:id="@+id/button_five"
                android:onClick="operationFunction"
                android:text="@string/button_five"
                />
            <Button
                style="@style/button_style"
                android:id="@+id/button_six"
                android:onClick="operationFunction"
                android:text="@string/button_six"/>
            <Button
                style="@style/button_style"
                android:id="@+id/button_minus"
                android:onClick="operationFunction"
                android:layout_marginEnd="8dp"
                android:text="@string/button_minus"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="4">

            <Button
                android:text="@string/button_seven"
                android:id="@+id/button_seven"
                android:onClick="operationFunction"
                style="@style/button_style" />
            <Button
                style="@style/button_style"
                android:id="@+id/button_eight"
                android:onClick="operationFunction"
                android:text="@string/button_eight"
                />
            <Button
                style="@style/button_style"
                android:id="@+id/button_nine"
                android:onClick="operationFunction"
                android:text="@string/button_nine"/>
            <Button
                style="@style/button_style"
                android:id="@+id/button_plus"
                android:onClick="operationFunction"
                android:layout_marginEnd="8dp"
                android:text="@string/button_plus"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="4">

            <Button
                android:text="@string/button_clean"
                android:id="@+id/button_clean"
                android:onClick="operationFunction"
                style="@style/button_style" />
            <Button
                style="@style/button_style"
                android:id="@+id/button_zero"
                android:onClick="operationFunction"
                android:text="@string/button_zero"
                />
            <Button
                style="@style/button_style"
                android:id="@+id/button_dot"
                android:onClick="operationFunction"
                android:text="@string/button_dot"/>
            <Button
                style="@style/button_style"
                android:id="@+id/button_equal"
                android:onClick="operationFunction"
                android:layout_marginEnd="8dp"
                android:text="@string/button_equal"/>
        </LinearLayout>

    </LinearLayout>
</RelativeLayout>